got all 3 on homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             </ul>
         </div>
 
-        <!--the views get injected in the following element:-->
+        <div class="allCont">
+          <div class="first" ui-view="utahjazz"></div>
+          <div class="second" ui-view="losangeleslakers"></div>
+          <div class="third" ui-view="miamiheat"></div>
+        </div>
         <div ui-view></div>
 
     </div>
